--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.virginiatech.piraj.hw5drawingapp">
 
     <!-- Permission to use camera -->
-    <uses-feature  android:name="android.hardware.camera2" android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <!-- Permission to access external storage for saving photos -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
